<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.diary.AddFoodActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

<!--        <Button-->
<!--            android:id="@+id/btn_scan_a_meal"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="50dp"-->
<!--            android:text="@string/scan_a_meal"-->
<!--            android:layout_gravity="end"-->
<!--            style="?android:borderlessButtonStyle"-->
<!--            android:background="@drawable/border_button" />-->

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_add_food_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@color/white"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:textAlignment="textEnd" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:text="@string/serving_size_g"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_add_serving_size"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@color/white"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:textAlignment="textEnd" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:text="@string/calories"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_add_calories"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@color/white"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:textAlignment="textEnd" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:text="@string/fat_g"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_add_fat"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@color/white"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:textAlignment="textEnd" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:text="@string/carbohydrates_g"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_add_carbo"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@color/white"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:textAlignment="textEnd" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:text="@string/protein_g"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_add_protein"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@color/white"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:textAlignment="textEnd" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:text="@string/sugars_g"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_add_sugars"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@color/white"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:textAlignment="textEnd" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:text="Time"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner_add_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="20sp" />


            <Button
                android:id="@+id/btn_add_date"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:drawableEnd="@drawable/ic_baseline_date_range_24"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/pick_a_date"
                android:textAlignment="textEnd"
                android:textColor="@color/black" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>